# marzban_api

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: client.rs  error.rs  lib.rs
src/api/: admin.rs  core.rs  default.rs  mod.rs  node.rs  subscription.rs  system.rs  user.rs  user_template.rs
src/models/: admin.rs  auth.rs  base.rs  components.rs  errors.rs  mod.rs  node.rs  proxy.rs  system.rs  token.rs  user.rs  user_template.rs
