[package]
name = "marzban_api"
version = "0.1.0"
edition = "2021"
authors = ["nulluser0 <diuyueng@gmail.com>"]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["serde_derive"] }
thiserror = "1.0.61"
validator = { version = "0.18.1", features = ["derive"] }
