[package]
name = "marzban_api"
version = "0.1.3"
edition = "2021"
authors = ["nulluser0 (da0da) <diuyueng@gmail.com>"]
description = "A simple async client which abstracts/simplifies the interactions with the Marzban panel API (https://github.com/Gozargah/Marzban)."
repository = "https://github.com/nulluser0/marzban_api"
license = "MIT"
keywords = ["marzban", "xtls", "api", "xray", "client"]
categories = ["api-bindings", "asynchronous", "network-programming", "web-programming",]
readme = "README.md"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["serde_derive"] }
thiserror = "1.0.61"
validator = { version = "0.18.1", features = ["derive"] }