[package]
name = "marzban_api"
version = "0.2.5"
edition = "2021"
authors = ["nulluser0 (da0da) <diuyueng@gmail.com>"]
description = "A simple async client which abstracts/simplifies the interactions with the Marzban panel API (https://github.com/Gozargah/Marzban)."
repository = "https://github.com/nulluser0/marzban_api"
license = "MIT"
keywords = ["marzban", "xtls", "api", "xray", "client"]
categories = ["api-bindings", "asynchronous", "network-programming", "web-programming",]
readme = "README.md"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_json = "1.0.133"
thiserror = "2.0.4"
tokio = { version = "1.42.0", features = ["full"] }
validator = { version = "0.19.0", features = ["derive"] }
